--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,17 @@ MarkupSafe==1.1.1
 itsdangerous==1.1.0
 Werkzeug==1.0.1
 flask_cors==4.0.0
+google-api-core==2.8.1
+google-api-python-client==2.115.0
+google-auth==2.27.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+google-cloud-bigquery==3.1.0
+google-cloud-bigquery-storage==2.13.2
+google-cloud-core==2.3.0
+google-cloud-storage==2.3.0
+google-crc32c==1.3.0
+google-resumable-media==2.3.3
+googleapis-common-protos==1.56.2
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
